docs(edgejobs): document api
