# api/http/handler/edgejobs/edgejob_create.go
@@ -11,10 +11,22 @@ import (
 	httperror "github.com/portainer/libhttp/error"
 	"github.com/portainer/libhttp/request"
 	"github.com/portainer/libhttp/response"
-	"github.com/portainer/portainer/api"
+	portainer "github.com/portainer/portainer/api"
 )
 
-// POST /api/edge_jobs?method=file|string
+// edgeJobCreate
+// @summary Create an EdgeJob
+// @description
+// @tags EdgeJobs
+// @security ApiKeyAuth
+// @accept json
+// @produce json
+// @param method query string true "Creation Method" Enums(file, string)
+// @param body body edgeJobCreateFromFileContentPayload true "EdgeGroup data when method is string"
+// @param body body edgeJobCreateFromFilePayload true "EdgeGroup data when method is file"
+// @success 200 {object} portainer.EdgeGroup
+// @failure 500
+// @router /edge_jobs [post]
 func (handler *Handler) edgeJobCreate(w http.ResponseWriter, r *http.Request) *httperror.HandlerError {
 	method, err := request.RetrieveQueryParameter(r, "method", false)
 	if err != nil {
