# api/http/handler/edgejobs/edgejob_file.go
@@ -6,7 +6,7 @@ import (
 	httperror "github.com/portainer/libhttp/error"
 	"github.com/portainer/libhttp/request"
 	"github.com/portainer/libhttp/response"
-	"github.com/portainer/portainer/api"
+	portainer "github.com/portainer/portainer/api"
 	bolterrors "github.com/portainer/portainer/api/bolt/errors"
 )
 
@@ -14,7 +14,17 @@ type edgeJobFileResponse struct {
 	FileContent string `json:"FileContent"`
 }
 
-// GET request on /api/edge_jobs/:id/file
+// edgeJobFile
+// @summary Fetch a file of an EdgeJob
+// @description
+// @tags EdgeJobs
+// @security ApiKeyAuth
+// @accept json
+// @produce json
+// @param id path string true "EdgeJob Id"
+// @success 200 {object} edgeJobFileResponse
+// @failure 500,400
+// @router /edge_jobs/{id}/file [get]
 func (handler *Handler) edgeJobFile(w http.ResponseWriter, r *http.Request) *httperror.HandlerError {
 	edgeJobID, err := request.RetrieveNumericRouteVariableValue(r, "id")
 	if err != nil {
